<resources>
    <string name="app_name">HassDroid</string>

    <!-- Login screen -->
    <string name="hint_url">Home Assistant URL/IP</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_existing">Password (leave empty for current)</string>

    <string name="invalid_url_scheme">Invalid URL scheme, enter like: [https://]example.com[:8123]/</string>

    <string name="button_connect">Connect</string>
    <string name="button_connect_no_network">No network available</string>
    <string name="login_error">Connection failure: Invalid IP or password, or is the server off?</string>
    <string name="login_error_generic">Connection failure: Invalid IP, or is the server off?</string>
    <string name="login_error_wrong_password">Connection failure: Invalid password!</string>
    <string name="dialog_basic_auth_title">Authentication required</string>
    <string name="dialog_basic_auth_text">%s requires a username and password.</string>
    <string name="hint_dialog_basic_auth_username">Username</string>
    <string name="hint_dialog_basic_auth_password">@string/hint_password</string>
    <string name="dialog_basic_auth_button_login">Log in</string>
    <string name="dialog_login_error_ssl_mismatch_title">SSL hostname mismatch error!</string>
    <string name="dialog_login_error_ssl_mismatch_message">The current IP doesn\'t match the hostname specified in the SSL certificate.
        That means that you either typed in an alias to your hostname or an attacker may have tried to intercept your connection.
        Only tap ignore if you really know what you do!</string>
    <string name="dialog_login_error_invalid_cert_title">Invalid SSL Certificate!</string>
    <string name="dialog_login_error_invalid_cert_message">The following SSL certificate is invalid:\n%1$s\nIssued by:\n%2$s\n
        \nThat means that either you\'re using a self-signed or expired certificate, or an attacker may have tried to intercept your connection.
        \nOnly proceed if you 100%%-ly know what you\'re doing!</string>
    <string name="dialog_login_error_ignore">Ignore</string>

    <!-- Main screen -->
    <string name="menu_custom_tab">Show Web UI</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">@string/settings_name</string>

    <string name="button_scene_activate">activate</string>
    <string name="climate_current_temperature">Currently: %1$.1f %2$s</string>
    <string name="media_player_byline_format">%1$s • <i>on %2$s</i></string>
    <string name="media_player_stop_toast">Stopping playback…</string>

    <!-- Settings screen -->
    <string name="settings_name">Settings</string>
    <string name="preference_category_location_tracking">Location tracking</string>
    <string name="preference_enable_location_tracking">Enable location tracking</string>
    <string name="preference_location_device_name">Device name</string>
    <string name="preference_location_device_name_summary">Enter the name of your device as listed in known-devices.yaml, or choose your own.
        Feature is disabled if empty.\nCurrently set to: %s</string>
    <string name="preference_location_update_interval">Update interval</string>
    <string-array name="location_update_interval_summaries">
        <item>Every 5 minutes (higher drain)</item>
        <item>Every 10 minutes (default)</item>
        <item>Every 30 minutes</item>
        <item>Every hour</item>
    </string-array>
    <string name="preference_category_miscellaneous">Miscellaneous</string>
    <string name="preference_reset_host_mismatches">Reset host mismatches</string>
    <string name="preference_reset_host_mismatches_summary">Clear the list of ignored SSL host mismatches</string>
    <string name="preference_reset_host_mismatches_summary_empty">List is empty, nothing to do</string>
    <string name="toast_ignored_ssl_mismatches_cleared">Cleared list.</string>
    <string name="preference_help_translate">Help translate</string>
    <string name="preference_help_translate_summary">Translate this app into your language on crowdin!</string>

    <!-- Shortcut activity -->
    <string name="button_add_shortcut">Add shortcut</string>
</resources>