<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/dialog_basic_auth_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_basic_auth_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dialog_basic_auth_username"
            android:inputType="textAutoComplete" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_basic_auth_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dialog_basic_auth_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>